--- a/MyAppEnglish/app/src/main/res/values/strings.xml
+++ b/MyAppEnglish/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
     <string name="app_name">MyAppEnglish</string>
-    <string name="title_activity_cenas">CenasActivity</string>
+    <string name="title_activity_cenas">MyAppEnglish</string>
     <string name="title_activity_tab">MyAppEnglish</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_main2">MyAppEnglish</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
